# GitLite

./: .gitignore  CMakeLists.txt  README.md  test.sh
include/: git_objects.h  repo.h
src/: git_objects.cpp  main.cpp  repo.cpp
